--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My site</title>
 </head>
-<body>
+<body style="color:blue;text-align:center;"
   <h1>Welcome to my WebPage!</h1>
 </body>
 </html>
